tests/NormalTests/paczka1/fuzzy1/68359335.err
Error in line 1: AuAlsUD S992 49,5
Error in line 17: XSCOST A891 -1,1
Error in line 29: AuAlsUD A745 60,7
